# PyAstLean

./: .gitignore  CLAUDE.md  Libraries.lean  PastaLean.lean  PastaLeanTest.lean  PyAstLeanTest.lean  README.md  lake-manifest.json  lakefile.toml  palc.lean  py2lean.lean  pyproject.toml  regen_examples.py  requirements.txt
.github/workflows/: lean_action_ci.yml
Libraries/: Registry.lean
Libraries/functools/: FunctoolsDef.lean
Libraries/math/: Mapping.lean  MathDef.lean
Libraries/numpy/: Creation.lean  LinearAlgebra.lean  Mapping.lean  NumpyDef.lean  Statistics.lean
Libraries/pandas/: CSV.lean  Cell.lean  DataFrame.lean  DataFrameStats.lean  Dispatch.lean  GroupBy.lean  Mapping.lean  Series.lean  SeriesStats.lean  Subscript.lean
Libraries/scipy/: Mapping.lean  ScipyDef.lean
PastaLean/: Attributes.lean  Basic.lean  Codegen.lean  PyAPI.lean  PyGens.lean  PyVerify.lean  README.md
PastaLean/PyAPI/: BuiltinRegistry.lean  Builtins.lean  CommonProtocols.lean  Core.lean  Dicts.lean  (+8 more)
PastaLeanTest/: Fiddle.lean  MiniRegex.lean  PALCRunner.lean  PastaLeanCheck.lean  PyAPI.lean  Random.lean
PyAstLean/: Attributes.lean  Basic.lean  Codegen.lean  ConstantGen.lean  PyAPI.lean  PyGens.lean  README.md
PyAstLeanTest/: Fiddle.lean  PALCRunner.lean  PyAPI.lean  PyAstLeanCheck.lean  Random.lean
cp_harness/: _errcount.py  _measure.py  _wrap.py
docs/: contract-prompt-system.md  syntax-gaps.md  verifiable-python-design.md
src/: annotate_python.py  example.ipynb  llm.py  node_visitor.py  normalize_loops.py  py2lean.py  test.py  test_normalize_loops.py  toplevel_state.py
(+247 files in other folders)
